Moved Menu and TreeView into their own folders.
In a separate commit to help with diff.

--- a/SuperGameEngine/Tools/Tools.vcxproj
+++ b/SuperGameEngine/Tools/Tools.vcxproj
@@ -234,13 +234,13 @@
     <ClInclude Include="ToolsEngine\Settings\ToolsSettingsPaths.h" />
     <ClInclude Include="ToolsEngine\ToolsEngine.h" />
     <ClInclude Include="ToolsEngine\ToolsEngineEntry.h" />
-    <ClInclude Include="ToolsEngine\ViewElements\MenuItemView.h" />
-    <ClInclude Include="ToolsEngine\ViewElements\MenuView.h" />
-    <ClInclude Include="ToolsEngine\ViewElements\TreeView.h" />
-    <ClInclude Include="ToolsEngine\ViewElements\TreeViewItem.h" />
-    <ClInclude Include="ToolsEngine\ViewElements\TreeViewItemCollapsibleBehaviour.h" />
-    <ClInclude Include="ToolsEngine\ViewElements\TreeViewItemCollapsibleIcon.h" />
-    <ClInclude Include="ToolsEngine\ViewElements\TreeViewItemOnSelectedEventArguments.h" />
+    <ClInclude Include="ToolsEngine\ViewElements\Menu\MenuItemView.h" />
+    <ClInclude Include="ToolsEngine\ViewElements\Menu\MenuView.h" />
+    <ClInclude Include="ToolsEngine\ViewElements\TreeView\TreeView.h" />
+    <ClInclude Include="ToolsEngine\ViewElements\TreeView\TreeViewItem.h" />
+    <ClInclude Include="ToolsEngine\ViewElements\TreeView\TreeViewItemCollapsibleBehaviour.h" />
+    <ClInclude Include="ToolsEngine\ViewElements\TreeView\TreeViewItemCollapsibleIcon.h" />
+    <ClInclude Include="ToolsEngine\ViewElements\TreeView\TreeViewItemOnSelectedEventArguments.h" />
     <ClInclude Include="Windows\DockableContainer\DockableContainer.h" />
     <ClInclude Include="Windows\GameViewport\GameViewport.h" />
     <ClInclude Include="Windows\InspectorWindow\InspectorWindow.h" />
@@ -275,10 +275,10 @@
     <ClCompile Include="ToolsEngine\Settings\ToolsSettingsPaths.cpp" />
     <ClCompile Include="ToolsEngine\ToolsEngine.cpp" />
     <ClCompile Include="ToolsEngine\ToolsEngineEntry.cpp" />
-    <ClCompile Include="ToolsEngine\ViewElements\MenuItemView.cpp" />
-    <ClCompile Include="ToolsEngine\ViewElements\MenuView.cpp" />
-    <ClCompile Include="ToolsEngine\ViewElements\TreeView.cpp" />
-    <ClCompile Include="ToolsEngine\ViewElements\TreeViewItem.cpp" />
+    <ClCompile Include="ToolsEngine\ViewElements\Menu\MenuItemView.cpp" />
+    <ClCompile Include="ToolsEngine\ViewElements\Menu\MenuView.cpp" />
+    <ClCompile Include="ToolsEngine\ViewElements\TreeView\TreeView.cpp" />
+    <ClCompile Include="ToolsEngine\ViewElements\TreeView\TreeViewItem.cpp" />
     <ClCompile Include="Windows\DockableContainer\DockableContainer.cpp" />
     <ClCompile Include="Windows\GameViewport\GameViewport.cpp" />
     <ClCompile Include="Windows\InspectorWindow\InspectorWindow.cpp" />
