[#100] Created Game Object storage objects

--- a/SuperGameEngine/Tools/Tools.vcxproj.filters
+++ b/SuperGameEngine/Tools/Tools.vcxproj.filters
@@ -202,6 +202,24 @@
     <Filter Include="Source Files\ToolsEngine\ViewElements\Window">
       <UniqueIdentifier>{d3055b0a-a9ac-4bdd-8f69-0ebaa5b2cf5a}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\GameEngineEquivalents">
+      <UniqueIdentifier>{89038a93-4b2b-428e-bc1a-0c289d163c25}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\GameEngineEquivalents\GameObject">
+      <UniqueIdentifier>{2137b9cf-21d5-4cae-82a4-5350f2f5890a}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\ToolsEngine\ViewElements\Window">
+      <UniqueIdentifier>{1ac2c456-f8a0-497a-b945-0bbcbf4454ca}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\GameEngineEquivalents">
+      <UniqueIdentifier>{0ee8a10d-1362-474c-96f8-76799d1847ac}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\GameEngineEquivalents\GameObject">
+      <UniqueIdentifier>{9dd7d635-4060-4743-887f-ee87c5671a3b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\GameEngineEquivalents\Component">
+      <UniqueIdentifier>{d02614f7-7cd4-42b4-a89d-677c8f65ed4f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="framework.h">
@@ -213,7 +231,7 @@
     <ClInclude Include="EngineIncludes\EngineInclude.h">
       <Filter>Header Files\EngineInclude</Filter>
     </ClInclude>
-    <ClInclude Include="TestComponent\ToolsComponent.h">
+    <ClInclude Include="TestComponent\ToolsGameComponent.h">
       <Filter>Header Files\TestComponent</Filter>
     </ClInclude>
     <ClInclude Include="ToolsEngine\ToolsEngine.h">
@@ -408,11 +426,23 @@
     <ClInclude Include="ToolsEngine\ViewElements\ColoursAndStyles\ColourPalette.h">
       <Filter>Header Files\ToolsEngine\ViewElements\ColoursAndStyles</Filter>
     </ClInclude>
-    <ClInclude Include="ToolsEngine\ViewElements\Window\WindowElement.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="ToolsEngine\ViewElements\ColoursAndStyles\EmbeddedFont.h">
       <Filter>Header Files\ToolsEngine\ViewElements\ColoursAndStyles</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEngineEquivalents\GameObject\GameObject.h">
+      <Filter>Header Files\GameEngineEquivalents\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="ToolsEngine\ViewElements\Window\WindowElement.h">
+      <Filter>Header Files\ToolsEngine\ViewElements\Window</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEngineEquivalents\GameObject\ToolsGameObject.h">
+      <Filter>Header Files\GameEngineEquivalents\GameObject</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEngineEquivalents\Component\Component.h">
+      <Filter>Header Files\GameEngineEquivalents\Component</Filter>
+    </ClInclude>
+    <ClInclude Include="GameEngineEquivalents\Component\ToolsComponent.h">
+      <Filter>Header Files\GameEngineEquivalents\Component</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -422,7 +452,7 @@
     <ClCompile Include="EngineIncludes\EngineInclude.cpp">
       <Filter>Source Files\EngineInclude</Filter>
     </ClCompile>
-    <ClCompile Include="TestComponent\ToolsComponent.cpp">
+    <ClCompile Include="TestComponent\ToolsGameComponent.cpp">
       <Filter>Source Files\TestComponent</Filter>
     </ClCompile>
     <ClCompile Include="ToolsEngine\ToolsEngine.cpp">
@@ -523,6 +553,12 @@
     </ClCompile>
     <ClCompile Include="ToolsEngine\ViewElements\Window\WindowElement.cpp">
       <Filter>Source Files\ToolsEngine\ViewElements\Window</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEngineEquivalents\GameObject\ToolsGameObject.cpp">
+      <Filter>Source Files\GameEngineEquivalents\GameObject</Filter>
+    </ClCompile>
+    <ClCompile Include="GameEngineEquivalents\Component\ToolsComponent.cpp">
+      <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
