--- a/SuperGameEngine/SuperGameEngine/imgui.ini
+++ b/SuperGameEngine/SuperGameEngine/imgui.ini
@@ -13,7 +13,7 @@ DockId=0xC0DFADC4,1
 Pos=505,24
 Size=1414,1082
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000007,1
 
 [Window][Logger Output]
 Pos=0,1108
@@ -25,7 +25,7 @@ DockId=0x00000002,0
 Pos=505,24
 Size=1414,1082
 Collapsed=0
-DockId=0x00000007,1
+DockId=0x00000007,0
 
 [Window][Delete?]
 Pos=434,312
@@ -229,7 +229,7 @@ DockSpace       ID=0x14621557 Window=0x3DA2F1DE Pos=0,24 Size=2560,1345 Split=X
   DockNode      ID=0x00000003 Parent=0x14621557 SizeRef=1919,701 Split=Y
     DockNode    ID=0x00000001 Parent=0x00000003 SizeRef=1280,673 Split=X Selected=0xB8729153
       DockNode  ID=0x00000006 Parent=0x00000001 SizeRef=503,650 CentralNode=1 Selected=0xB8729153
-      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=1414,650 Selected=0x85FD66EC
+      DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=1414,650 Selected=0x5E5F7166
     DockNode    ID=0x00000002 Parent=0x00000003 SizeRef=1280,261 Selected=0x086A1005
   DockNode      ID=0x00000004 Parent=0x14621557 SizeRef=639,701 Selected=0xB576AE73
 DockSpace       ID=0xC0DFADC4 Pos=0,19 Size=1280,701 CentralNode=1 Selected=0x4A68580B
