--- a/SuperGameEngine/Tools/Tools.vcxproj
+++ b/SuperGameEngine/Tools/Tools.vcxproj
@@ -211,12 +211,16 @@
     <ClInclude Include="Engine\Graphics\ImGuiTexture.h" />
     <ClInclude Include="FatedQuestLibraries.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GameEngineEquivalents\Component\Component.h" />
+    <ClInclude Include="GameEngineEquivalents\Component\ToolsComponent.h" />
+    <ClInclude Include="GameEngineEquivalents\GameObject\GameObject.h" />
+    <ClInclude Include="GameEngineEquivalents\GameObject\ToolsGameObject.h" />
     <ClInclude Include="ImGuiIncludes.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="SystemActions\FileDialog\FileDialog.h" />
     <ClInclude Include="SystemActions\FileDialog\FileDialogProvider.h" />
     <ClInclude Include="SystemActions\FileDialog\TinyFileDialogs.h" />
-    <ClInclude Include="TestComponent\ToolsComponent.h" />
+    <ClInclude Include="TestComponent\ToolsGameComponent.h" />
     <ClInclude Include="ToolsEngine\Communication\EngineEntryCommunication.h" />
     <ClInclude Include="ToolsEngine\Communication\EngineFlowControl.h" />
     <ClInclude Include="ToolsEngine\Communication\EngineFlowPlayControl.h" />
@@ -281,6 +285,8 @@
     <ClCompile Include="Engine\Graphics\ImGuiSuperTexture.cpp" />
     <ClCompile Include="Engine\Graphics\ImGuiSuperTextureWrapper.cpp" />
     <ClCompile Include="Engine\Graphics\ImGuiTexture.cpp" />
+    <ClCompile Include="GameEngineEquivalents\Component\ToolsComponent.cpp" />
+    <ClCompile Include="GameEngineEquivalents\GameObject\ToolsGameObject.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Tools_Debug|x64'">Create</PrecompiledHeader>
@@ -291,7 +297,7 @@
     </ClCompile>
     <ClCompile Include="SystemActions\FileDialog\FileDialogProvider.cpp" />
     <ClCompile Include="SystemActions\FileDialog\TinyFileDialogs.cpp" />
-    <ClCompile Include="TestComponent\ToolsComponent.cpp" />
+    <ClCompile Include="TestComponent\ToolsGameComponent.cpp" />
     <ClCompile Include="ToolsEngine\Communication\ToolsEngineEntryCommunication.cpp" />
     <ClCompile Include="ToolsEngine\Communication\ToolsEngineControl.cpp" />
     <ClCompile Include="ToolsEngine\Documents\Scene\SceneDocument.cpp" />
